syntax = "proto3";

package custom_sensor;

message CustomSensorData {
  float waterQuantity = 1;
}
